# sip-bridge-mcp

./: .gitignore  LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml  server.json  server.py
.github/workflows/: ci.yml  codeql.yml  scorecard.yml
tests/: test_server.py
